# aave-audio-server

./: .gitignore  CMakeLists.txt  Makefile  aave_interface.cpp  aave_interface.h  alsa_interface.cpp  alsa_interface.h  kfalsa.cpp  kfsys_interface.cpp  kfsys_interface.h  kfsys_sound.cpp  kfsys_sound.h  kfsys_source.cpp  kfsys_source.h  main_test.cpp  main_test.py  main_test_demo.cpp  main_test_local.cpp  main_test_udp.cpp  test.cpp  test.h  util.h  view.cpp  view.h
2dview/: demo.pro
2dview/src/: 2dview.cpp  view.cpp  view.h
client/: client.py  start_demo.py  test_client.py  test_client_demo.py
examples/: modtracker.py  music.py  xm.py
src/: aave_interface.cpp  alsa_interface.cpp  alsa_interface.h  boost_test.cpp  kfsys_interface.cpp  kfsys_interface.h  kfsys_keyframe.h  kfsys_sound.cpp  kfsys_sound.h  kfsys_source.cpp  kfsys_source.h  main.cpp  main_test_udp.cpp  test.cpp  test.h  testlib.py  util.cpp
tests/: test_server.py
